# pl-player-impact

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
notebooks/: 01_data_and_eda.ipynb  02_naive_plusminus.ipynb  03_rapm.ipynb  04_xg_rapm.ipynb  05_validation_and_final_rankings.ipynb
outputs/: rankings.csv
src/plimpact/: __init__.py  build.py  cli.py  config.py  finishing.py  model.py  naive.py  parse.py  predict.py  rapm.py  scrape.py  stints.py  validate.py  viz.py
tests/: test_finishing.py  test_stints.py
