[project]
name = "plimpact"
version = "0.1.0"
description = "Premier League player impact ratings: naive plus-minus, RAPM, and xG-RAPM"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "understatapi>=0.6",
    "requests>=2.32",
    "pyyaml>=6",
    "typer>=0.12",
    "tqdm>=4.66",
]

[project.scripts]
plimpact = "plimpact.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "jupyterlab>=4",
    "ipykernel>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plimpact"]

[tool.pytest.ini_options]
testpaths = ["tests"]
